--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.2
   equatable: ^2.0.5
+  google_nav_bar: ^5.0.6
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
+  logger: ^1.3.0
+  firebase_database: ^10.2.1
+  pretty_dio_logger: ^1.3.1
+  dio: ^5.1.2
+  retrofit: ^4.0.1
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
