--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   dio: ^5.1.2
   retrofit: ^4.0.1
   flutter_easyloading: ^3.0.5
-
+  shared_preferences: ^2.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
