--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  cloud_firestore: ^4.8.0
   logger: ^1.3.0
   firebase_database: ^10.2.1
   pretty_dio_logger: ^1.3.1
@@ -48,6 +49,7 @@ dependencies:
   retrofit: ^4.0.1
   flutter_easyloading: ^3.0.5
   shared_preferences: ^2.1.1
+  flutter_svg: ^1.1.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
